2007-01-06  Gabor Kelemen  <kelemeng@gnome.hu>

	* gnome-wp-item.c: Mark message showing background image size and type for translation
	
	Fixes #341899 

2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-wp-xml.c: (gnome_wp_xml_load_list): Plug a leak.
	Bug #376949

2006-08-18  Rodney Dawes  <dobey@novell.com>

	* background.desktop.in.in: Use preferences-desktop-wallpaper as the
	icon name per the Icon Naming Specification
	* gnome-background-properties.glade: Set the icon name for the window
	to be preferences-desktop-wallpaper as per the naming spec
	* gnome-wp-capplet.[ch]: Remove GtkIconTheme instance from structure
	(gnome_wp_icon_theme_changed): Don't need this method any longer
	(wallpaper_properties_init): Remove unused variables
	Don't need to get the icon_info to load a pixbuf and set an icon, from
	the theme any longer, as we can just specify the icon with one call
	Don't need the extra _ensure_style call here

2006-08-18  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Set the content area
	border to 0 in the parsed rc string
	Remove the set_border_width calls for the dialog's vbox and action area

	Fixes #332830

2006-03-18  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-xml.c (gnome_wp_xml_load_list): Only pass G_FILE_TEST_IS_DIR
	to the g_file_test calls

	Fixes #331486

2006-02-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* gnome-background-properties.glade: Add the missing translatable flag
	in the Finish button.

2006-02-10  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (wallpaper_properties_clicked): Add the missing
	GTK_RESPONSE_DELETE_EVENT back in so that we exit properly with it

2006-02-09  Rodney Dawes  <dobey@novell.com>

	* gnome-background-properties.glade: Replace the Apply/Cancel/OK
	buttons with a Finish button, using the stock apply icon

	* gnome-wp-capplet.c (gnome_wp_props_wp_set): Don't need to check if
	we are the same image as we were before now